# AIReader

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  aiAssistant_ui.py  ai_client.py  debug_together_models.py  debug_tools.py  doc_converter.py  main.py  pyproject.toml  readerPanel.py  requirements.txt  serverless-models.md  tic-tac-toe.html  ui.py  verify_models.py  web_app.py
ui/: __init__.py  aiAssistant_ui.py  readerPanel.py  ui.py
web_ui/: index.html
