[project]
name = "aireader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.86.0",
    "easyocr>=1.7.2",
    "httpx>=0.28.1",
    "openai>=2.31.0",
    "pydantic>=2.12.5",
    "pypdf>=6.10.0",
    "pyside6>=6.11.0",
]
